# defcmd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
example/: 01_annotated.py  02_subcommands.py  advanced.py  nested_subcommands.py  script.py  subcommands.py
examples/: 01_annotated.py  04_examples.py  05_files.py  06_lists.py  07_stdin.py
src/defcmd/: __init__.py  ansi.py  argparser.py  convert.py  interactive.py  introspect.py  prompt.py  runner.py  spec.py
src/defcmd/terminal/: __init__.py  ansi.py  keypress.py  reader.py
src/defcmd/widgets/: __init__.py  auto_widget.py  base.py  confirm.py  multi_value.py  prompt.py  select.py  text.py
tests/: test_ansi.py  test_argparser.py  test_convert.py  test_interactive.py  test_introspect.py  test_prompt.py  test_runner.py  test_stdin.py  test_subcommands.py  test_widgets.py
tests/integration/: conftest.py  test_basic.py  test_color.py  test_examples.py  test_stdin.py  test_subcommands.py
tests/terminal/: test_ansi.py  test_keypress.py  test_reader.py
tests/widgets/: test_confirm.py  test_multi_value.py  test_prompt.py  test_select.py  test_text_input.py
