[project]
name = "defcmd"
version = "0.1.0"
description = "Turn a function signature into a command-line script"
readme = "README.md"
authors = [
    { name = "Shresht Srivastav", email = "59516096+Shresht7@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.1.1"]

[project.urls]
"Homepage" = "https://github.com/Shresht7/defcmd"
"Bug Tracker" = "https://github.com/Shresht7/defcmd/issues"
