[project]
name = "defcmd"
version = "0.5.0"
description = "Turn a function signature into a command-line script"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Shresht Srivastav", email = "59516096+Shresht7@users.noreply.github.com" },
]
keywords = ["cli", "command-line", "argparse", "decorator", "script"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = []

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-cov>=7.1.0"]

[project.urls]
"Homepage" = "https://github.com/Shresht7/defcmd"
"Documentation" = "https://github.com/Shresht7/defcmd/blob/main/README.md"
"Issues" = "https://github.com/Shresht7/defcmd/issues"

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
